fix Add add opportunity add binary files into index